style.css
/*
===ELEMENTS CLASSES===
*/

body {
    margin: auto;
    background-color: lightgray;
}

ul {
    list-style-type: none;
    padding: 0px;
}

.sidebar {
    background-color: lightblue;
    height: 100%;
    width: 100%;
}

.header {
    background-color: #ffffff;
    width: 100%;
}

.content {
    
}

.main { 
    height: 75%;
}

.right {
    margin: 10px;
}

.left {
    margin: 10px;
}

.cardholder {
    height: 90%;
    margin: 10px;
}

.card {
    background-color: #ffffff;
}

.updateholder {
    height: 100%;
    margin: 10px;
}

.update {

}

.peopleholder {
    
}

.people {

}

/* 
===GRID ELEMENTS===
*/

.container {
    display: grid;
    grid-template-areas: 'sidebar header header header header'
    'sidebar main main main main';
    gap: 10px;
}

/*
Sidebar Grid.
*/
.sidebar {
    grid-area: sidebar;

    display: grid;
    /* Make a grid here for nav elements */

}

/*
Header Grid.
*/
.header {
    grid-area: header;

    display: grid;
    grid-template-areas: 'top'
    'bottom';
}

.top {
    grid-area: top;
}

.bottom {
    grid-area: bottom;
}

/*
Main grid.
*/
.main {
    grid-area: main;

    display: grid;
    grid-template-areas: 'left left left right'
    'left left left right';
}

.left {
    grid-area: left;
}

.cardholder {
    display: grid;
    grid-template-columns: auto auto;
    gap: 10px;
}

.right {
    grid-area: right;
}

.updateholder {
    display: grid;
    grid-template-columns: auto;
    gap: 10px;
}

.peopleholder {

}

